--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .fib {
 	display: inline-block;
 	background-color: rgba(112,128,144,0.1);
@@ -9,17 +10,21 @@
 	margin-right: 4px;
 }
 
+.fib-mid {
+	float: auto;
+	display: inline-block;
+	margin-left: 4px;
+}
+
 .fib-right {
 	float: right;
 	display: inline-block;
 	margin-left: 4px;
 }
 
-.shadowed {
+.box {
 	text-shadow: 1px 1px 2px black;
-	color:       white;
-}
-.stuff-box {
+	color: white;
 	font-family: 'helvetica neue', helvetica, sans-serif;
 	letter-spacing: 1px;
 	text-transform: capitalize;
